force-app/main/default/objects/CC_Instructor__c/CC_Instructor__c.object-meta.xml
<CustomObject>
    <description>Extension record holding instructor-specific attributes (rating, rank, specialties) for a Contact who also serves as a training instructor.</description>
    <label>Instructor</label>
    <nameField>
        <displayFormat>INS-{0000}</displayFormat>
        <label>Instructor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>