force-app/main/default/objects/CC_Instructor__c/fields/ScenarioMemo__c.field-meta.xml
<CustomField>
    <fullName>ScenarioMemo__c</fullName>
    <description>Free-text log of which scenario or experiment this record was created/used for, and when. / このレコードがどのシナリオ・実験のために作成/使用されたか、いつ何をしたかを記録する自由記述欄。</description>
    <inlineHelpText>Record what scenario/experiment this record relates to, with dates. Example: "2026/08/11 シナリオD検証用に作成。" / このレコードが関連するシナリオ・検証内容を日付とともに記載してください（例：「2026/08/11 シナリオD検証用に作成。」）。</inlineHelpText>
    <label>Scenario Memo</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>