force-app/main/default/objects/CC_Instructor__c/fields/Specialties__c.field-meta.xml
<CustomField>
    <fullName>Specialties__c</fullName>
    <description>Areas of expertise this instructor can teach. / この講師が対応できる得意分野。</description>
    <inlineHelpText>Select all applicable specialty areas. / 該当する得意分野をすべて選択してください。</inlineHelpText>
    <label>Specialties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Communication</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Business Mindset</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Work Basics</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Management</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Team Building</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Thinking Skills</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Subordinate Development</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Customer Service / Complaint Handling</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Speaking Skills</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Writing Skills</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Career Design</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Process Improvement</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Risk Management</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Evaluation / Recruitment</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Marketing / Planning</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>DX / IT / Office Skills</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Global / Diversity</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Healthcare</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Statistics / RPA / AI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>