force-app/main/default/objects/CC_Instructor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InstructorName__c</columns>
    <columns>Rank__c</columns>
    <columns>Rating__c</columns>
    <columns>Specialties__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>